fixing the h1 spacing now back buttons are removed

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -1516,10 +1516,16 @@ textarea.form-control-large {
         width: 10%;
       }
     }
+
+    /*  GUy - COTOEBR 2019 - Removing this now that back buttons are not included  */
+    /*
     .heading-large {
-      margin-top: 0.5em;
-    }
-    .report-error {
+          margin-top: 0.5em;
+        }
+    */
+
+
+.report-error {
       color: #454a4c;
       display: inline-block;
       margin: 0 auto;
@@ -2849,7 +2855,7 @@ button.link:focus span {
 	h3 {
 		margin-top: 10px;
 	}
-   
+
    }
 
   .file {
